rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ArrayReferences/ShouldFail/syntax06/Test.java
// .result=COMPILE_FAIL
import java.util.*;


public class Test {
	
	interface A {
		int[][] m(long i);
	}
	
	public static void main(String[] arg) {
		A a = int[][]::new;
	}

}